# vector06sdl

./: .gitignore  8253.h  CMakeLists.txt  Containerfile  Dockerfile  HOWTO-MINGW32.txt  Makefile  Makefile.cross-mingw  Makefile.darwin  Makefile.linux  Makefile.linux-x86_64  README-windows.md  README.md  board.cpp  board.h  common.mk  docker-build.sh  docker-make-tests.sh  docker-make-windows.sh  docker-make.sh  i8080.cpp  i8080.h  install-build-deps.sh  io.h  keyboard.h  main.cpp  options.cpp  options.h  podman-build-container.sh  podman-make-windows.sh  sound.h  src.code-workspace  tv.h
android/: .gitignore  TODO  local.properties
android/app/: CMakeLists.txt  build.gradle
android/app/boot/: boot.c
android/app/src/androidTest/java/com/svofski/v06x/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: about_en.html  bas261.rom  bazis.rom  castmus.rom  dizrek_.rom  incursion.rom  lenna.rom  pwm18i2.fdd  scaner5.fdd  simon001.fdd  skynet.fdd
android/app/src/main/java/com/svofski/v06x/: Broadcasts.java  Brutnik.java  EmulatorRenderer.java  EmulatorRunner.java  EmulatorSurfaceView.java  MainActivity.java
android/app/src/main/java/com/svofski/v06x/cpp/: Emulator.java  LoadKind.java
android/app/src/main/java/com/svofski/v06x/keyboard/: OnScreenKeyboard.java
android/app/src/main/java/com/svofski/v06x/uiextras/: AboutModel.java  CommonPagerAdapter.java  LoaderModel.java  LoaderTabsFragment.java  MyRomItemRecyclerViewAdapter.java  RomListerFragment.java
android/app/src/main/java/com/svofski/v06x/uiextras/loaders/: BundledROMLoaderModel.java  LoaderUtil.java  LocalStorageLoaderModel.java  RomListItem.java  RomListItemAsset.java  RomListItemDummy.java  RomListItemStorage.java
android/app/src/main/java/com/svofski/v06x/util/: PermissionRequester.java  RawResourceReader.java  ShaderHelper.java
android/app/src/main/res/color/: keycap_brownpoop_selector.xml  keycap_greenish_selector.xml  keycap_lightpoop_selector.xml  keycap_mustard_selector.xml
android/app/src/main/res/drawable/: oskkey.xml  oskkey_brown.xml  oskkey_greenish.xml  oskkey_mustard.xml
android/app/src/main/res/layout/: activity_main.xml  floppy_listitem.xml  fragment_loader_tabs.xml  fragment_romitem.xml  fragment_romitem_list.xml  onscreenkeyboard.xml
android/app/src/main/res/layout-land/: activity_main.xml
android/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/app/src/test/java/com/svofski/v06x/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
attic/: biquad.cpp
bas2txt/: bas2asc.py  test.cmd
bas2txt/testdata/: BLOKIGR1.BAS  KALAH.BAS  REKLAMA.BAS  UGLIMEN.BAS  bochka.bas
boot/: BOOT24.TXT  boot.txt  boots.txt
cmake/: FindSDL2.cmake
coreutil/: CMakeLists.txt  README.md
coreutil/sources/coreutil/: concat.h  concat.tcc  cpu.cc  cpu.h  logging.h  logging.tcc  math.h  math.tcc  memory.cc  memory.h  memory.tcc  restrict_ptr.h  restrict_ptr.tcc  ringbuffer.cc  ringbuffer.h  sched.h  sched.tcc  scope_guard.h  simd.h  simd.tcc  stdfile.h  stdfile.tcc  tagged_ptr.h  tagged_ptr.tcc
coreutil/sources/coreutil/simd/: abs.tcc  load.tcc  mul_add.tcc  mul_hi.tcc  pack.tcc  store.tcc
coreutil/tools/: generate_math_constants.cc
debian/: changelog  control  files  rules
fast-filters/: CMakeLists.txt
fast-filters/programs/: CMakeLists.txt
fast-filters/sources/: dummy.cpp
fast-filters/sources/coredsp/: filter.h
fast-filters/sources/coredsp/filter/: fir.tcc  iir.tcc
filters/: Resampling Filter Design.ipynb  endstage.h  halfband.h  halfband.py  interp.h  poly.py  shaderfir.py
filters/attic/: poly.py
platform/android/: android_main.cpp  emulator_android.cpp  event.h
platform/godot/: .gitignore  GODOT-VERSION  SConstruct  SELECT_POSIX_LIBS_MINGW.txt  build.bat  export.bat  keys.py  replaceicon.bat  v06x.pck  zipfile-comment.txt
platform/godot/about/: convert.sh  v06x.asm
platform/godot/about/tools/: png2db-arzak.py  utils.py  ym6break.py
platform/godot/boot/: boots.c
platform/godot/exports/: .gitignore  test.cmd  v06x.pck
platform/godot/src/: debug.cpp  debug.h  debug_disasm.h  emulator_godot.cpp  event.h  godot_main.cpp  godot_scancodes.cpp  godot_scancodes.h  simple.cpp  utils_string.cpp  utils_string.h  v06x_class.h
platform/godot/v06x/: CodePanel.gd  DebugPanel.gd  DebugScrollContainer.gd  Gamepad.gd  Gamepad.tscn  KeyboardKey.gd  KeyboardKey.tscn  Knob.gd  Knob.tscn  MemoryDump.gd  MemoryDump.tscn  MemoryTexture.gd  MemoryTexture.tscn  MemoryView.gd  MemoryView.tscn  NiceTooltip.gd  NiceTooltip.tscn  OnScreenKeyboard.gd  OnScreenKeyboard.tscn  Reticle.gd  Reticle.tscn  RusLat.gd  RusLat.tscn  ScopePanel.gd  ScopePanel.tscn  ShaderCell.gd  ShaderCell.tscn  ShaderPanel.gd  ShaderPanel.tscn  SoundPanel2.gd  SoundPanel2.tscn  TextureButton2.gd  TextureButton2.tscn  bas2asc.gd  call_stack_list_panel.gd  default_env.tres  export_presets.cfg  main.gd  main.tscn  project.godot  (+1 more)
res/: convert.bat  icon64.rgba  icon64.xcf
scripts/: README.md  bas25hook.chai  basic.bat  basload.chai  iohook.chai  musload.chai  rkload.chai  testio.bat
shaders/: singlepass.fsh  singlepass.vsh
src/: 8253.h  ay.h  biquad.cpp  biquad.h  board.cpp  board.h  breakpoint.h  cadence.cpp  cadence.h  debug.cpp  debug.h  emulator.cpp  emulator.h  eth.cpp  eth.h  fd1793.h  filler.cpp  filler.h  fsimage.cpp  fsimage.h  glextns.cpp  glextns.h  globaldefs.h  hal.cpp  i8080.cpp  i8080.h  i8080_hal.h  icon.cpp  icon.h  io.h  keyboard.h  main.cpp  memory.cpp  memory.h  options.cpp  options.h  resampler.cpp  resampler.h  scriptnik.cpp  scriptnik.h  (+15 more)
test/: pngdiff.py  run-tests-wsl2.sh  runtests-native.sh  runtests-wine.sh  t-v06c-wsl.sh  t-v06c.sh  tests.cpp  testsuite.sh
testroms/: bord2.rom  brdtestx.asm  brdtestx.rom  chkvi53.asm  chkvi53.bat  chkvi53.rom  clrs.rom  cpu_spd.rom  cpuspeed.rom  i8253.rom  i82531.rom  i82532.rom  i8253_bcd.rom  i8253_bcd.txt  readme.txt  scrltst2.rom  test.fdd  testtp.rom  tst8253.asm  tst8253.rom  tst8253.txt  vst.rom
winbat/: basic.bat  msvec.bat
(+17 files in other folders)
